EVINCE BACKPORTS: libview: Show correct warning when printing

Backported by Peter Moser <pitiz29a@gmail.com>

Taken from:
https://gitlab.gnome.org/GNOME/evince/commit/33a4d5d4e35710c832bb

commit 33a4d5d4e35710c832bbdee736a0219ca86f63fe
Author: Marek Kasik <mkasik@redhat.com>
Date:   Fri Mar 21 14:10:26 2014 +0100

    libview: Show correct warning when printing

    Show that requested format is not supported by printer
    if it is not supported.

    https://bugzilla.gnome.org/show_bug.cgi?id=724044